--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       sizes="640x1136"
       rel="apple-touch-startup-image"
     />
-    <title>React App</title>
+    <title>Kengan Fighters</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
