--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, viewport-fit=cover"
     />
     <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="transparent" />
     <meta
       name="description"
       content="Web site created using create-react-app"
