--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Kengan Fighters" />
+    <meta name="apple-mobile-web-app-title" content="React Base" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
@@ -214,11 +214,12 @@
       media="screen and (device-width: 744px) and (device-height: 1133px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
       href="splash_screens/8.3__iPad_Mini_portrait.png"
     />
-    <title>Kengan Fighters</title>
+    <title>React Base</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="portal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
